trunk/Archive2/06/f4a638f8c1d6d8/output
g++ (GCC) 4.9.0
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

In file included from /usr/local/include/c++/4.9.0/thread:39:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.0/functional: In instantiation of 'struct std::_Bind_simple<timed_execution*(void (timed_execution::*)())>':
/usr/local/include/c++/4.9.0/thread:137:47:   required from 'std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = timed_execution*; _Args = {void (timed_execution::*)()}]'
main.cpp:16:56:   required from here
/usr/local/include/c++/4.9.0/functional:1665:61: error: no type named 'type' in 'class std::result_of<timed_execution*(void (timed_execution::*)())>'
       typedef typename result_of<_Callable(_Args...)>::type result_type;
                                                             ^
/usr/local/include/c++/4.9.0/functional:1695:9: error: no type named 'type' in 'class std::result_of<timed_execution*(void (timed_execution::*)())>'
         _M_invoke(_Index_tuple<_Indices...>)
         ^
